# aoc2022

./: Cargo.toml
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day16_part1.rs  day16_part2.rs  day17.rs  day17_optimized.rs  day17_pretty.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_template.rs  lkc.rs  main.rs
src/lkc/: aabb.rs  array2d.rs  arraynd.rs  bijection.rs  cli.rs  dumb.rs  explore.rs  expr.rs  geometric_algebra.rs  geometric_traits.rs  interval_set.rs  line.rs  line_iterator.rs  linear_index.rs  math.rs  modular.rs  sketch.rs  transformations.rs  v2.rs  vector.rs
