[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"

[dependencies.lk_math]
#version = "0.3.0"
path = "../lk_math"

# [build]
# target = ["x86_64-pc-windows-msvc"]
